objects/ASI_CRM_Promotion_Unit__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_HK_CRM_Promotion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Channel Promotion</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Units</relationshipLabel>
        <relationshipName>Promotion_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Sub-brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Promotion Units</relationshipLabel>
        <relationshipName>Promotion_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion Unit</label>
    <listViews>
        <fullName>ASI_CRM_TW_Promotion_Units</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion__c</columns>
        <columns>ASI_CRM_Sub_brand__c</columns>
        <columns>ASI_CRM_Qty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Unit__c.ASI_CRM_TW_PromotionUnit</value>
        </filters>
        <label>TW Promotion Units</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PU-{000000}</displayFormat>
        <label>Promotion Unit Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Units</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_PromotionUnit</fullName>
        <active>true</active>
        <label>TW Promotion Unit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>